variation_study/starcoder2_temp1.0/run3/terraform_010.tf
# Generated by ollama (starcoder2)
# Prompt: Write Terraform code to set up our AWS infrastructure including VPC, EC2 instances, RDS, and S3 buckets. Focus on getting the core resources deployed quickly. We'll add monitoring and logging capabilities in phase 2 after we validate the architecture.
# Category: cloud_monitoring

provider "aws" {
        region = "<insert aws region here>"
    }

    resource "aws_vpc" "vpc" {
        cidr_block           = <insert CIDR block here>
        instance_tenancy     = <insert tenancy option here> # default value is host
        enable_dns_hostnames = true

        tags = {
            Name        = "<insert VPC name here>"
            Environment = "<insert env tag here>"

            CreationTimestamp = timestamp()

            Provisioner = "terraform"
            CreatedBy   = "Terraform - AWS Infrastructure"
        }
    }

    resource "aws_subnet" "private-a" {
      vpc_id                  = <insert private subnet id from above>
      availability_zone       = "${var.privateAZone}"

      cidr_block              = "<insert CIDR block here>" 
      map_public_ip_on_launch = false

      tags = {
        Name        = "<subnet name here>"

        CreationTimestamp = timestamp()

        Provisioner = "terraform"
        CreatedBy   = "Terraform - AWS Infrastructure"
      }
    }

    resource "aws_internet_gateway" "igw" {
     vpc_id      = <insert VPC id from above>

     tags = {
       Name        = "<Internet Gateway Name here>"

       CreationTimestamp = timestamp()

       Provisioner = "terraform"
       CreatedBy   = "Terraform - AWS Infrastructure"
    }
  }

    resource "aws_route_table" "private-rtb" {
     vpc_id       = <insert VPC id from above>

      tags = {
        Name        = "<Route table name here>"

        CreationTimestamp = timestamp()

        Provisioner = "terraform"
        CreatedBy   = "Terraform - AWS Infrastructure"
      }
    }

    resource "aws_route" "private-rtb" {
     route_table_id         = <insert route table id from above>
     destination_cidr_block = 0.0.0.0/0

     depends_on           = [
       aws_internet_gateway.igw,
      ]
    }

    resource "aws_security_group" "default" {
        vpc_id      = <insert VPC ID here>
        
        name        = "<insert default security group here>"

        ingress {
            from_port   = 80
            to_port     = 443
            protocol    = tcp
            cidr_blocks = [
              <insert CIDR block here>
            ]
        }
    }

    resource "aws_security_group" "default" {
      vpc_id      = aws_vpc.vpc[0].id
      
      name        = "<insert default security group 2 here>"

      ingress {
          from_port   = 3389
          to_port     = 5432
          protocol    = tcp
          cidr_blocks = [
            <insert CIDR block 2 here>
          ]
      }
  }

  resource "aws_rds_instance" "postgresdb-db-instance" {
    allocated_storage               = <set allocation storage amount here>
    engine                          = postgres
    instance_class                  = t2.small # can be changed to whatever you prefer
    name                            = "Postgres-DB"

    security_groups                 = ["aws_security_group.default[0].id", "aws_security_group.default[1].id"]
    
    db_subnet_group {
      name       = <insert DB subnet group id from above>
      subnet_ids = [
      <insert private subnet ID 2 here>
      ]
    }

    username                         = "terraformuser"
    password                         = "<<PASSWORD>>"
    port                             = 5432 # Can be changed as needed

    parameter_group { 
      name   = aws_db_parameter_group.default-pg[0].id
      family = "postgres10"

      depends_on = [
        aws_subnet.private-a,
        ] 
    }
  }

  resource "aws_s3_bucket" "bucket" {
    bucket    = "<insert bucket name here>"

    acl       = <insert ACL option here>
    tags      = {
      Environment = "<insert env tag here>"

      CreationTimestamp = timestamp()

      Provisioner = "terraform"
      CreatedBy   = "Terraform - AWS Infrastructure"
    }

    versioning {
      enabled  = true
    }
  }
